prevent overflow

--- a/app/css/main.sass
+++ b/app/css/main.sass
@@ -16,6 +16,8 @@ main
     a, span
       height: 20px
     td, td small
+      overflow: hidden
+      text-overflow: ellipsis
       position: relative
       z-index: 10
 .progress
